propellor (4.0.2) UNRELEASED; urgency=medium

  * Apt.mirror can be used to set the preferred apt mirror of a host,
    overriding the default CDN. This info is used by 
    Apt.stdSourcesList and Sbuild.builtFor.
    Thanks, Sean Whitton.
  * Property.Partition: Update kpartx output parser, as its output format
    changed around version 0.6. Both output formats are supported now.
   
 -- Joey Hess <id@joeyh.name>  Sun, 19 Mar 2017 16:37:27 -0400

propellor (4.0.1) unstable; urgency=medium

  * Fix build with pre-AMP ghc.
  * Tor: Restart daemon after installing private key.
  * Tor.named, Tor.torPrivKey: Include the new ed25519 public/private key
    pair in addition to the old secret_id_key.

 -- Joey Hess <id@joeyh.name>  Sun, 19 Mar 2017 16:18:11 -0400

propellor (4.0.0) unstable; urgency=medium

  * Added Monoid instances for Property and RevertableProperty.
  * Removed applyToList. Instead, use mconcat. (API change)
    If you had:  applyToList accountFor [User "joey", User "root"]
    use instead: mconcat (map accountFor [User "joey", User "root"])
  * Makefile: Removed "run" target which was default target.
    "make" now only builds propellor, does not run it.
    Note that propellor 1.0.0 and earlier relied on this target for
    the Cron.runPropellor property's cronjob to work, so upgrading
    directly from 1.0.0 to 4.0.0 would break that cron job.
  * Remove make from propellor's dependency list; it's not used by
    propellor any longer.
  * Implemented hostChroot, as originally seen in my slides at
    Linux.Conf.Au 2017 in January. Now that it's not vaporware, it allows
    one Host to build a disk image that has all the properties of another
    Host.
  * DiskImage building properties used to propagate DNS info out from
    the chroot used to build the disk image to the Host. That is no longer
    done, since that chroot only exists as a side effect of the disk image
    creation and servers will not be running in it.